Poprawione funkcje. Dodane wstępne sortowanie